--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,8 +1,71 @@
-.App {
-   width: 0;
-   height: 0;
-   border: 50px solid;
-   border-color: #f00 #0f0 #ccc #00f;
-
-
+.title {
+   font-size: 18px;
+   text-align: center;
+   margin-top: 40px;
 }
+
+.back {
+   background-color: #f6dd00;
+   z-index: -1;
+   height: 216px;
+   position: absolute;
+   width: 100%;
+   top: 0px;
+}
+
+.mySwiper {
+   margin-top: 20px;
+}
+
+.mySwiper img {
+   width: 90%;
+   border-radius: 10px;
+   box-shadow: 0 0 12px #ffc04c;
+   margin: 12px 0;
+}
+
+.swiper-slide {
+   text-align: center;
+   font-size: 18px;
+}
+
+.swiper-pagination-bullet-active {
+   background-color: white;
+}
+
+.sao img {
+   width: 50px;
+}
+
+.sao {
+   font-size: 16px;
+   background: linear-gradient(to left, #f8d900, #fdcd28);
+   border-radius: 50%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100px;
+   height: 100px;
+   margin: 0 auto;
+   z-index: 9;
+   box-shadow: 0 0 12px #ffc04c;
+}
+
+.outsao {
+   padding: 30px 0;
+   background-repeat: no-repeat;
+   background-size: 200px;
+   background-position-x: 50%;
+   margin-top: 10px;
+}
+
+.nearby a{
+   font-size: 16px;
+   color: black;
+   margin-left: 5%;
+}
+.nearby img{
+   height: 16px;
+   position: relative;
+   bottom: 1px;
+}   
