--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,7 +1,7 @@
 .title {
    font-size: 18px;
    text-align: center;
-   margin-top: 40px;
+   padding-top: 30px;
 }
 
 .back {
@@ -13,23 +13,22 @@
    top: 0px;
 }
 
-.mySwiper {
+.mSwiper {
    margin-top: 20px;
 }
 
-.mySwiper img {
+.mSwiper img {
    width: 90%;
    border-radius: 10px;
    box-shadow: 0 0 12px #ffc04c;
    margin: 12px 0;
 }
 
-.swiper-slide {
+.mSwiper .swiper-slide {
    text-align: center;
-   font-size: 18px;
 }
 
-.swiper-pagination-bullet-active {
+.mSwiper .swiper-pagination-bullet-active {
    background-color: white;
 }
 
@@ -59,13 +58,26 @@
    margin-top: 10px;
 }
 
-.nearby a{
-   font-size: 16px;
+.nearby a {
+   font-size: 14px;
    color: black;
    margin-left: 5%;
 }
-.nearby img{
-   height: 16px;
+
+.nearby img {
+   height: 14px;
    position: relative;
    bottom: 1px;
-}   
+}
+.nearby{
+   margin-bottom: 10px;
+}
+
+.row1{
+   margin: 10px 5%;
+   font-size: 14px;
+   height: 22px;
+}
+.row1 a{
+   color: black;
+}
