--- a/src/pages/nearby/nearby.less
+++ b/src/pages/nearby/nearby.less
@@ -1,7 +1,66 @@
-.nearbymap{
+.nearbymap {
     position: fixed;
     width: 100%;
     height: 100%;
-    top: 63.28;
+    top: 63.28px;
     z-index: 1;
+    padding-bottom: 180px;
+}
+
+.bottomgo {
+    background-color: white;
+    position: fixed;
+    width: 100%;
+    height: 180px;
+    z-index: 1;
+    bottom: -10px;
+    border-radius: 10px;
+    overflow-y: auto;
+}
+
+.bottomgo .bogorow1 {
+    width: 90%;
+    margin-left: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 0 15px 0;
+    border-bottom: 1px solid #c7c7c7;
+}
+
+.bottomgo .bogorow2 img {
+    height: 15px;
+    position: relative;
+    // bottom: -3px;
+    margin: 0 5px 0 15px;
+}
+
+.bottomgo .bogorow3 {
+    display: flex;
+    line-height: 14px;
+    margin-top: 15px;
+}
+
+.bottomgo .bogorow5 {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.bottomgo .bogorow6 {
+    margin-top: 15px;
+    color: #868686;
+    font-size: 12px;
+}
+
+.bottomgo .bogorow4 img {
+    height: 30px;
+    width: 30px;
+    margin: 10px 0 5px 0;
+}
+
+.bottomgo .bogorow4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #868686;
 }
